# 3U_Joint_Design_of_UAV-USV-UUV_Networks_for_Cooperative_Target_Hunting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: smoke.yml
configs/: 3u_default.json  ddpg.json  sim_compare.json  sim_main.json  topology_set.json
docs/: 3u_reproduction_notes.md  experiment_log.md  formula_map.md
matlab/: ascfc_controller.m  calc_formation_error.m  fxcfc_controller.m  plot_ddpg_reward.m  plot_topology.m  run_alignment_sweep.m  run_fixed_topology_main.m  run_paper_reproduce.m  uav_kinematics.m  usde_estimator.m
matlab/+uavrepro/: apply_measurement_noise.m  build_desired_offsets.m  compute_alignment_metrics.m  compute_error_metrics.m  compute_gap_diagnostics.m  compute_usde_diagnostics.m  default_config.m  ficfc_controller copy.m  fixed_time_control.m  fixed_time_controller.m  formation_error_fixed.m  formation_graph.m  leader_reference.m  measurement_index.m  plot_error_curve.m  plot_fixed_topology_results.m  run_ddpg_training.m  run_fixed_topology_sim.m  uav_kinematics.m  usde_update.m  wind_disturbance.m  wrap_to_pi_local.m
outputs/: fixed_topology_sim_log.mat  formation_error.fig  sim_result.mat  uav_trajectory.fig
outputs/paper_results/: all_figures.fig  paper_results.mat
scripts/: eval_compare_case.py  eval_main_case.py  run_3u_reproduction.py  run_nominal_control.py  run_switch_control.py  train_topology_ddpg.py
src/three_u_repro/: __init__.py  agents.py  config.py  environment.py  experiments.py  physics.py  svg_plots.py
src/uav_repro/: __init__.py  config.py
src/uav_repro/control/: __init__.py  baseline_ascfc.py  (+2 more)
(+21 files in other folders)
